--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "rc",
     "react-native"
   ],
-  "author": "Redclouds",
+  "author": "redclouds <redcloudsteam@gmail.com> (https://github.com/timeturnback)",
   "license": "MIT",
   "devDependencies": {
     "release-it": "^15.6.1",
@@ -42,5 +42,21 @@
   "bugs": {
     "url": "https://github.com/timeturnback/rc-helper/issues"
   },
-  "homepage": "https://github.com/timeturnback/rc-helper#readme"
+  "homepage": "https://github.com/timeturnback/rc-helper#readme",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release ${version}",
+      "tagName": "v${version}"
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true
+    }
+  }
 }
