--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "prepack": "tsup",
-    "release": "release-it"
+    "release": "release-it",
+    "test": "jest --watch",
+    "run:test-script": "npx nodemon script/run.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,13 @@
   "author": "redclouds <redcloudsteam@gmail.com> (https://github.com/timeturnback)",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.6.2",
+    "@types/jest": "^29.5.3",
+    "babel-jest": "^29.6.2",
+    "jest": "^29.6.2",
     "release-it": "^15.6.1",
     "tsup": "^6.5.0",
     "typescript": "^4.5.2"
@@ -58,5 +67,6 @@
     "github": {
       "release": true
     }
-  }
+  },
+  "dependencies": {}
 }
